# tankble

./: Bullet.cpp  Bullet.h  CMakeLists.txt  CMakeLists.txt.allegro  Config.cpp  Config.h  Coordinates.h  Direction.h  Drawable.cpp  Drawable.h  Game.cpp  Game.h  Input.cpp  Input.h  InputAction.h  LICENSE  Level.h  Map.cpp  Map.h  MapUtils.cpp  MapUtils.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Point.h  PointUtils.cpp  PointUtils.h  README.md  ResourceType.h  Resources.cpp  Resources.h  Screen.cpp  Screen.h  Status.cpp  Status.h  Tank.cpp  Tank.h  TankStats.h  TankType.h  (+17 more)
.github/workflows/: buld-and-test.yml  cmake-single-platform.yml  codeql.yml  static-analysis-and-coverage.yml
image/: background.pcx  background.tga  background_menu.tga  background_menu2.pcx  background_menu2.tga  lose.tga  menu_item.tga  menu_item2.tga  menu_item_select.tga  menu_item_select2.tga  player_background.tga  win.tga
image/board/: base_ok.tga  brick.tga  bullet.tga  ice.tga  plain.tga  plant.tga  power-up_life.tga  power-up_shield.tga  power-up_tank.tga  speed_up.tga  steel.tga  tank_tier1.tga  tank_tier1_enemy.tga  tank_tier2.tga  tank_tier2_enemy.tga  tank_tier3.tga  tank_tier3_enemy.tga  tank_tier4.tga  tank_tier4_enemy.tga  water.tga
image/menu/: item_select.tga
image/plansza/: czolg_mark_1.tga  czolg_mark_1_0.tga  czolg_mark_1_1.tga  czolg_mark_1_2.tga  czolg_mark_1_3.tga  czolg_mark_1_i_pol.tga  czolg_mark_2.tga  czolg_mark_2_0.tga  czolg_mark_2_1.tga  czolg_mark_2_2.tga  czolg_mark_2_3.tga  czolg_mark_3.tga  czolg_mark_3_0.tga  czolg_mark_3_1.tga  czolg_mark_3_2.tga  czolg_mark_3_3.tga  czolg_mark_4.tga  czolg_mark_4_0.tga  czolg_mark_4_1.tga  czolg_mark_4_2.tga  czolg_mark_4_3.tga  plansza_cegla.tga  plansza_lod.tga  plansza_orzel.tga  plansza_orzel_dead.tga  plansza_stal.tga  plansza_woda.tga  plansza_zielsko.tga  plansza_zwykle.tga  pocisk.tga  pwrup_czas.tga  pwrup_czolg.tga  pwrup_gwiazda.tga  pwrup_lopata.tga  swoj_mark_1.tga  swoj_mark_1_0.tga  swoj_mark_1_1.tga  swoj_mark_1_2.tga  swoj_mark_1_3.tga  swoj_mark_2.tga  (+14 more)
map/: Base.cpp  Base.h  Brick.cpp  Brick.h  Bullet.cpp  Bullet.h  Ice.cpp  Ice.h  LifeUp.cpp  LifeUp.h  Plain.cpp  Plain.h  Plant.cpp  Plant.h  PowerUp.cpp  PowerUp.h  Powerup.cpp  Powerup.h  ShieldUp.cpp  ShieldUp.h  SpeedUp.cpp  SpeedUp.h  Steel.cpp  Steel.h  TierUp.cpp  TierUp.h  Tile.cpp  Tile.h  Water.cpp  Water.h  base.cpp  base.h  brick.cpp  brick.h  bricks.cpp  bricks.h  bullet.cpp  bullet.h  dirt.cpp  dirt.h  (+18 more)
src/: Bullet.cpp  Bullet.h  Config.cpp  Config.h  Direction.h  Display.cpp  Display.h  Drawable.cpp  Drawable.h  Game.cpp  Game.h  Input.cpp  Input.h  InputAction.h  Level.h  Map.cpp  Map.h  MapUtils.cpp  MapUtils.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  Point.h  PointUtils.cpp  PointUtils.h  ResourceType.h  Resources.cpp  Resources.h  Screen.cpp  Screen.h  StandardInput.cpp  StandardInput.h  Status.cpp  Status.h  Tank.cpp  Tank.h  TankStats.h  TankType.h  UserChoice.h  (+3 more)
src/map/: Base.cpp  Base.h  Ice.cpp  Ice.h  LifeUp.h  Plain.h  Plant.cpp  Plant.h  PowerUp.cpp  PowerUp.h  ShieldUp.cpp  Steel.h  TierUp.cpp  TierUp.h  Tile.cpp  Tile.h  Water.cpp  Water.h
test/: BulletTest.cpp  CMakeLists.txt  Common.h  ConfigTest.cpp  DisplayTest.cpp  FakeDisplay.h  FakeInput.h  GameTest.cpp  MapTest.cpp  MapUtilsTest.cpp  MenuItemTest.cpp  MenuTest.cpp  StatusTest.cpp  TankTest.cpp  Test.cpp
tests/: BulletTest.cpp  CMakeLists.txt  Common.h  ConfigTest.cpp  DisplayTest.cpp  FakeDisplay.h  FakeInput.h  GameTest.cpp  MapTest.cpp  MenuItemTest.cpp  MenuTest.cpp  TankTest.cpp
